linked to thanks page

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 					<button type="submit">Send!</button>
 				</div>
 
+				<input type="hidden" name="_next" value="http://sarahdowling.github.io/real-forms/thanks.html">
+
 			</form>
 
 		</main>
