--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<div>
 					<label for="email">Email</label>
-					<input id="email" name="email"> type="email" name="email" required placeholder="you@yours.com">
+					<input id="email" name="email" type="email" name="email" required placeholder="you@yours.com">
 				</div>
 
 				<div>
