--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 				<div>
 					<label for="email">Email</label>
-					<input id="email" name="email" type="email" name="email" required placeholder="you@yours.com">
+					<input id="email" type="email" name="email" required placeholder="you@yours.com">
 				</div>
 
 				<div>
@@ -44,13 +44,13 @@
 				<div>
 					<fieldset>
 						<legend>What is your favourite treat?</legend>
-							<input name="happy" id="happy" type="radio" name="feels">
+							<input  id="happy" type="radio" name="feels">
 							<label for="happy">Happy</label>
-							<input name="sleepy" id="sleepy" type="radio" name="feels">
+							<input id="sleepy" type="radio" name="feels">
 							<label for="sleepy">Sleepy</label>
-							<input name="angry" id="angry" type="radio" name="feels">
+							<input  id="angry" type="radio" name="feels">
 							<label for="angry">Angry</label>
-							<input name="reallytired" id="really tired" type="radio" name="feels">
+							<input id="really tired" type="radio" name="feels">
 							<label for="really tired">Really Tired</label>
 					</fieldset>
 				</div>
