--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 				<div>
 					<fieldset>
 						<legend>What is your favourite treat?</legend>
-							<input  id="happy" type="radio" name="feels">
+							<input  id="happy" type="radio" name="feels" value="happy">
 							<label for="happy">Happy</label>
-							<input id="sleepy" type="radio" name="feels">
+							<input id="sleepy" type="radio" name="feels" value="sleepy">
 							<label for="sleepy">Sleepy</label>
-							<input  id="angry" type="radio" name="feels">
+							<input  id="angry" type="radio" name="feels" value="angry">
 							<label for="angry">Angry</label>
-							<input id="really tired" type="radio" name="feels">
-							<label for="really tired">Really Tired</label>
+							<input id="reallytired" type="radio" name="feels" value="reallytired">
+							<label for="reallytired">Really Tired</label>
 					</fieldset>
 				</div>
 
